Run job on all branches

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,9 @@
 name: ci
 on:
   push:
-    branches: [ * ]
+    branches:
+      - master
+      - fix-document
     tags: [ v* ]
   pull_request:
     branches: [ main ]
